Exception message from saproc.dll is garbled on Windows with Japanese locale

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 17
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b05

      I got garbled exception message as following when I run `livenmethods` CLHSDB command:

      ```
      sun.jvm.hotspot.debugger.DebuggerException : ?w???????W
      ```

      My Windows laptop is set Japanese Locale, garbled message was written in Japanese.
      saproc.dll would throw exception via `ThrowNew()` JNI function, but it accepts UTF-8 encoded message. However `FormatMessage()` Windows API would not return UTF-8 encoded string on Japanese locale.

            Assignee:
            Yasumasa Suenaga
            Reporter:
            Yasumasa Suenaga
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: