8259045: Exception message from saproc.dll is garbled on Windows with Japanese locale